# conhost

./: CMakeLists.txt  README.md  diff2  diff3.md  diff4.md  test.patch
docs/: architecture.md  conhost_behavior_imitation_matrix.md  conhost_module_partition.md  conhost_source_architecture.md  microtask_backlog.md  number_serdes_research.md  progress.md  roadmap.md  test_coverage_plan.md  windows_apis.md
docs/design/: cli_command_line_reconstruction.md  condrv_command_history.md  condrv_deprecated_user_defined_apis.md  condrv_disable_newline_auto_return.md  condrv_input_decoding.md  condrv_processed_input_ctrl_c.md  condrv_raw_io_parity.md  condrv_readconsole_line_editing.md  condrv_readconsole_line_input.md  condrv_reply_pending_wait_queue.md  condrv_server_process_integration_tests.md  condrv_setmode_validation.md  condrv_viewport_model.md  condrv_vt_alternate_screen_buffer.md  condrv_vt_autowrap.md  condrv_vt_c1_csi.md  condrv_vt_cursor_movement.md  condrv_vt_cursor_save_restore.md  condrv_vt_cursor_visibility.md  condrv_vt_dsr.md  condrv_vt_esc_dispatch.md  condrv_vt_horizontal_editing.md  condrv_vt_input_decoding.md  condrv_vt_irm_insert_mode.md  condrv_vt_origin_mode.md  condrv_vt_osc_window_title.md  condrv_vt_output_streaming.md  condrv_vt_parser_hardening_fuzz.md  condrv_vt_resets.md  condrv_vt_scroll_margins.md  condrv_vt_sgr.md  condrv_vt_sgr_extended_colors.md  config_user_conhost_file.md  renderer_screen_buffer_snapshot.md  renderer_text_attributes_and_cursor.md  renderer_text_measurement.md  renderer_window_host.md  runtime_default_terminal_delegation.md  serialization_fast_number_stress_tests.md
docs/howto/: debug_input.md  default_terminal.md
proxy/: CMakeLists.txt  README.md  console_handoff_iids.cpp  console_handoff_proxy.cpp  dlldata.cpp  terminal_handoff_proxy.cpp
proxy/arm64/: IConsoleHandoff.h  IConsoleHandoff_i.c  IConsoleHandoff_p.c  ITerminalHandoff.h  ITerminalHandoff_i.c  ITerminalHandoff_p.c  dlldata.c
proxy/x64/: IConsoleHandoff.h  IConsoleHandoff_i.c  IConsoleHandoff_p.c  ITerminalHandoff.h  ITerminalHandoff_i.c  ITerminalHandoff_p.c  dlldata.c
src/Console/: conapi.h  condrv.h  conmsgl1.h  ntcsrdll.h  ntcsrmsg.h  ntlpcapi.h  winconp.h
src/app/: application.cpp  application.hpp  main.cpp
src/cli/: console_arguments.cpp  console_arguments.hpp
src/condrv/: command_history.cpp  command_history.hpp  condrv_api_message.hpp  condrv_device_comm.cpp  condrv_device_comm.hpp  condrv_packet.hpp  condrv_protocol.hpp  condrv_server.cpp  condrv_server.hpp  screen_buffer_snapshot.cpp  screen_buffer_snapshot.hpp  vt_input_decoder.cpp  vt_input_decoder.hpp
src/config/: app_config.cpp  app_config.hpp
src/core/: assert.hpp  console_control.cpp  console_control.hpp  console_writer.hpp  cstring_view.hpp  exception.hpp  handle_view.hpp  host_signals.hpp  ntstatus.hpp  process_launcher.cpp  process_launcher.hpp  unique_handle.hpp  unique_local.hpp  utf8_stream_decoder.hpp  win32_handle.hpp  win32_io.hpp  win32_wait.hpp
src/localization/: localizer.cpp  localizer.hpp
src/logging/: log_level.hpp  logger.cpp  logger.hpp
src/renderer/: console_attributes.hpp  dwrite_text_measurer.cpp  dwrite_text_measurer.hpp  text_measurer.hpp  window_host.cpp  window_host.hpp
src/runtime/: com_embedding_server.cpp  com_embedding_server.hpp  console_connection_policy.hpp  console_handoff.hpp  default_terminal_host.cpp  default_terminal_host.hpp  host_signal_input_thread.cpp  host_signal_input_thread.hpp  key_input_encoder.cpp  key_input_encoder.hpp  launch_policy.cpp  launch_policy.hpp  legacy_conhost.cpp  legacy_conhost.hpp  server_handle_validator.cpp  server_handle_validator.hpp  session.cpp  session.hpp  signal_pipe_monitor.cpp  signal_pipe_monitor.hpp  startup_command.cpp  startup_command.hpp  terminal_handoff.cpp  terminal_handoff.hpp  terminal_handoff_com.hpp  terminal_handoff_host.cpp  terminal_handoff_host.hpp  window_input_sink.cpp  window_input_sink.hpp
src/serialization/: fast_number.cpp  fast_number.hpp
src/view/: screen_buffer_snapshot.hpp
tests/: CMakeLists.txt  com_embedding_integration_tests.cpp  com_embedding_server_tests.cpp  condrv_api_message_tests.cpp  condrv_client_input_events.cpp  condrv_client_raw_read.cpp  condrv_client_smoke.cpp  condrv_input_wait_tests.cpp  condrv_protocol_tests.cpp  condrv_raw_io_tests.cpp  condrv_screen_buffer_snapshot_tests.cpp  condrv_server_dispatch_tests.cpp  condrv_vt_fuzz_tests.cpp  condrv_vt_input_decoder_tests.cpp  config_tests.cpp  console_arguments_tests.cpp  console_attributes_tests.cpp  console_connection_policy_tests.cpp  console_handoff_proxy_registration.cpp  console_handoff_proxy_registration.hpp  dwrite_text_measurer_tests.cpp  embedding_test_host.cpp  fast_number_tests.cpp  host_signals_tests.cpp  key_input_encoder_tests.cpp  launch_policy_tests.cpp  logger_tests.cpp  oc_new_openconsole_proxy.def  process_integration_tests.cpp  server_handle_validator_tests.cpp  session_tests.cpp  signal_pipe_monitor_tests.cpp  startup_command_tests.cpp  stdio_probe.cpp  terminal_handoff_tests.cpp  test_main.cpp  utf8_stream_decoder_tests.cpp  win32_io_tests.cpp
tools/: register_default_terminal.ps1
